# icancgm-cli

./: .gitignore  Cargo.toml  package-lock.json  package.json
.agents/skills/sino-health-buddy/: SKILL.md
.github/workflows/: publish-npm.yml  release-binaries.yml
crates/sino-cli/: Cargo.toml
crates/sino-cli/src/: main.rs
crates/sino-core/: Cargo.toml
crates/sino-core/src/: credentials.rs  lib.rs  sources.rs
docs/: architecture.md  releasing.md
scripts/: check-release-ready.mjs  set-version.mjs
skills/query-sino-cgm/: SKILL.md
skills/query-sino-cgm/references/: workflow.md
skills/sino-health-buddy/references/: data-sources.md  nutrition-guide.md
